# simple_linalg_kernels

./: .gitignore  CMakeLists.txt  README.md
comet/: mult_dense_matrix.large.k32.ta.SCF.mlir  mult_dense_matrix.large.ta.LLVM.mlir  mult_dense_matrix.large.ta.SCF.mlir  mult_dense_matrix.large.ta.v0.8000x4000x200.LLVM.mlir  mult_dense_matrix.large.ta.v0.8000x4000x200.SCF.mlir  mult_dense_matrix.large.ta.v0.8000x400x200.SCF.mlir  mult_dense_matrix.large.ta.v2.20000.LLVM.mlir  mult_dense_matrix.large.ta.v2.20000.SCF.mlir  mult_dense_matrix.large.ta.v2.one_level_omp.SCF.mlir  mult_dense_matrix.large.ta.v3.one_level.large_mat.LLVM.mlir  mult_dense_matrix.large.ta.v3.one_level.large_mat.SCF.mlir  mult_dense_matrix.large.ta.v4.auto_target.LLVM.mlir  mult_dense_matrix.large.ta.v4.auto_target.SCF.mlir  mult_dense_matrix_vector.large.ta.LLVM.mlir  mult_dense_matrix_vector.large.ta.SCF.mlir  mult_spgemm_CSRxCSR_oCSR.ta.v0.openmp.LLVM.mlir  mult_spgemm_CSRxCSR_oCSR.ta.v0.openmp.SCF.mlir  mult_spmm_CSRxDense.large.ta.LLVM.mlir  mult_spmm_CSRxDense.large.ta.SCF.mlir  mult_spmm_CSRxDense.large.ta.v2.k32.lift_A.LLVM.mlir  mult_spmm_CSRxDense.large.ta.v2.k32.lift_A.SCF.mlir  mult_spmm_CSRxDense.large.ta.v3.k512.LLVM.mlir  mult_spmm_CSRxDense.large.ta.v3.k512.SCF.mlir  mult_spmm_CSRxDense.large.ta.v4.schedule.k32.LLVM.mlir  mult_spmm_CSRxDense.large.ta.v5.schedule.k512.LLVM.mlir  mult_spmm_CSRxDense.large.ta.v6.print.LLVM.mlir  mult_spmm_CSRxDense.large.ta.v6.print.SCF.mlir  mult_spmv_CSRxDense.ta.LLVM.mlir  mult_spmv_CSRxDense.ta.SCF.mlir  run01.openmp_from_scf.sh  run02.openmp_from_LLVM.sh  run03.async_from_scf.sh  run04.openmp_from_scf_with_matrix.sh  run05.openmp.sh  spgemm_only.parallelSCF.v11.omp_dialect.mlir  spgemm_only.parallelSCF.v11.omp_dialect.mlir.LLVM.mlir
cpp_baselines/: CMakeLists.txt  gemm.cpp
cpp_baselines/lib/: CMakeLists.txt
cpp_baselines/lib/include/: mmio.h  sparse.h
cpp_baselines/lib/src/: sparse.cpp
cpp_baselines/src/: gemv.cpp  spgemm.cpp  spmm.cpp  spmm.v2.cpp  spmm.v3.schedule.cpp  spmv.cpp
local_stuff/: output.gemm.comet.revised.csv  output.gemm.cpp.revised.csv  run01.benchmarks.sh
local_stuff/scripts/: proc01.extract_comet_exe_time.py  proc02.extract_cpp_exe_time.py  proc03.extract_comet_exe_time.append.py  proc05.combine_csv.py  run01.gemm_benchmarks.sh  run02.gemv_benchmarks.sh  run03.spmm_benchmarks.sh  run04.spmv_benchmarks.sh  run05.spmm_multi_matrices.k32.sh  (+11 more)
(+6 files in other folders)
